fixed credit card alignment

--- a/src/components/charts/RadialBarChart/RadialBarChart.module.css
+++ b/src/components/charts/RadialBarChart/RadialBarChart.module.css
@@ -1,25 +1,17 @@
 .ChartWeapper {
   position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .TextWrapper {
-  width: 100%;
-  height: 100%;
   pointer-events: none;
   position: absolute;
-  display: table;
 }
 
 .Text {
-  vertical-align: middle;
-  text-align: center;
-  display: table-cell;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: bold;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  transition: font-size 0.5s ease-in-out;
-}
-
-.ChartWeapper:hover .Text {
-  font-size: 1.05rem;
+  font-family: "Roboto";
 }
